prod/chat/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: 100xdevs/chat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
